Update about page and other tweaks

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         redcarpet
 highighter:       true
 
 # Permalinks
-permalink:        pretty
+permalink:        /blog/:title
 
 # Setup
 title:            Rich Wells
