--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ permalink:        /blog/:title
 
 # Setup
 title:            Rich Wells
-tagline:          ''
-description:      'Creative Director at <a href="http://yoomee.com" target="_blank">Yoomee</a>.Husband, Dad, Disciple. <a href="https://twitter.com/richwells" target="_blank">@richwells</a>.'
+tagline:          'Designer, illustrator and maker of things'
+description:      'Creative Director at Yoomee. Designer, illustrator and maker of things. Christian, husband, dad, cyclist. Sheffield, UK.'
 url:              http://richwells.me
 
 author:
